--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.2.11",
+    "@angular/core": "^9.1.2",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "rxjs": "^5.5.2",
+    "tslib": "^1.11.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
