--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
+    "@angular/animations": "^9.1.2",
+    "@angular/common": "^9.1.2",
+    "@angular/compiler": "^9.1.2",
     "@angular/core": "^9.1.2",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "bootstrap": "^3.3.7",
+    "@angular/forms": "^9.1.2",
+    "@angular/platform-browser": "^9.1.2",
+    "@angular/platform-browser-dynamic": "^9.1.2",
+    "@angular/router": "^9.1.2",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.4.1",
-    "jquery": "^3.2.1",
-    "rxjs": "^5.5.2",
+    "jquery": "^3.5.0",
+    "popper": "^1.0.1",
+    "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular/cli": "^9.1.2",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler-cli": "^9.1.2",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -47,6 +47,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "^3.8.3"
   }
 }
