--- a/package.json
+++ b/package.json
@@ -20,33 +20,35 @@
     "@angular/platform-browser": "^9.1.2",
     "@angular/platform-browser-dynamic": "^9.1.2",
     "@angular/router": "^9.1.2",
-    "bootstrap": "^3.4.1",
-    "core-js": "^2.4.1",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.5",
     "jquery": "^3.5.0",
-    "popper": "^1.0.1",
+    "popper.js": "1.16.1",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.901.2",
     "@angular/cli": "^9.1.2",
     "@angular/compiler-cli": "^9.1.2",
-    "@angular/language-service": "^5.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@angular/language-service": "^9.1.2",
+    "@types/dom-mediacapture-record": "^1.0.4",
+    "@types/jasmine": "~3.5.10",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~13.13.2",
     "codelyzer": "^5.2.2",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.1",
+    "karma": "~5.0.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "protractor": "~5.4.4",
+    "ts-node": "~8.9.0",
+    "tslint": "~6.1.1",
     "typescript": "^3.8.3"
   }
 }
